--- a/package.json
+++ b/package.json
@@ -9,16 +9,16 @@
   "dependencies": {
     "classnames": "^2.3.1",
     "date-fns": "^2.23.0",
-    "modern-normalize": "^1.1.0",
     "react": "^17.0.0",
-    "react-dom": "^17.0.0",
-    "sass": "^1.39.2"
+    "react-dom": "^17.0.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react-refresh": "^1.3.1",
     "eslint": "^7.32.0",
     "eslint-plugin-react": "^7.25.1",
     "prop-types": "^15.7.2",
-    "vite": "^2.5.4"
+    "vite": "^2.5.4",
+    "modern-normalize": "^1.1.0",
+    "sass": "^1.39.2"
   }
 }
