--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@acanakci/date-picker",
   "description": "A custom react date picker with min-max and selection limits.",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "author": {
     "name": "Abdullah Çanakçı",
     "email": "abdullahcanakci.0@gmail.com",
@@ -32,6 +32,9 @@
     ".": {
       "import": "./dist/date-picker.es.js",
       "require": "./dist/date-picker.umd.js"
+    },
+    "./style.css": {
+      "import": "./disy/style.css"
     }
   }
 }
